Fixed overflow on Y axis for desktop

--- a/client/resources/styles/index.css
+++ b/client/resources/styles/index.css
@@ -433,6 +433,7 @@ a:hover {
   overflow: auto; /* Enable scroll if needed */
   background-color: rgb(0,0,0); /* Fallback color */
   background-color: rgba(0,0,0,0.9); /* Black w/ opacity */
+  overflow-y: hidden;
 }
 
 /* Modal Content (image) */
